# wadtools

./: CHANGELOG.md  README.md  flake.nix  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/wadtools/: CHANGELOG.md  Cargo.toml
crates/wadtools/src/: extractor.rs  league_file.rs  main.rs
crates/wadtools/src/commands/: convert.rs  diff.rs  extract.rs  list.rs  mod.rs
crates/wadtools/src/utils/: config.rs  hashtable.rs  mod.rs
scripts/: install-wadtools.ps1
