[package]
name = "wadtools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
toml = "0.8.19"
regex = "1.11.1"
league-toolkit = { git = "https://github.com/LeagueToolkit/league-toolkit", version = "0.1.0" }
color-eyre = "0.6"
tracing = "0.1.41"
parking_lot = "0.12.3"
walkdir = "2.4.0"
itertools = "0.12.0"
serde = { version = "1.0.215", features = ["derive"] }
tracing-subscriber = { version = "0.3.2", features = ["local-time"] }
colored = "2"
csv = "1.3.1"
time = "0.3.37"
tracing-indicatif = "0.3.13"
